k8s/1-basic-deployment/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: microservices-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: satish2024/order-service:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5002
        livenessProbe:
          httpGet:
            path: /health
            port: 5002
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: microservices-demo
spec:
  selector:
    app: order-service
  ports:
  - port: 5002
    targetPort: 5002
  type: ClusterIP
